making discrete work

--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "<module 'lfp.model' from '/home/sholto/Desktop/robotics/learning_from_play/lfp/model.py'>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,44 +583,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if args.use_language:\n",
+    "    trainer.train_step(batch=batch, lang=batch, beta=0, video=None, bulk=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "actor\n",
-      "--\n",
-      "encoder\n",
-      "--\n",
-      "cnn\n",
-      "--\n",
-      "img_embed_to_goal_space\n",
-      "--\n",
-      "gripper_cnn\n",
-      "--\n",
-      "lang_embed_to_goal_space\n",
-      "--\n",
-      "tf.Tensor(16.078773, shape=(), dtype=float32)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "Cannot iterate over a scalar tensor.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-160-dc699e351fe6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse_language\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0menc_policy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplan_policy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmasks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseq_lens\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msentence_embeddings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlang\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvideo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbulk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    524\u001b[0m       \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cannot iterate over a tensor with unknown shape.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    525\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 526\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cannot iterate over a scalar tensor.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    527\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    528\u001b[0m       raise TypeError(\n",
-      "\u001b[0;31mTypeError\u001b[0m: Cannot iterate over a scalar tensor."
+      "Model: \"model_209\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_latent (InputLayer)       [(None, None, 4)]    0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_obs (InputLayer)          [(None, None, 103)]  0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "disc_to_cts_embedding (Dense)   (None, None, 64)     320         input_latent[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "input_goals (InputLayer)        [(None, None, 32)]   0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_89 (Concatenate)    (None, None, 199)    0           input_obs[0][0]                  \n",
+      "                                                                 disc_to_cts_embedding[0][0]      \n",
+      "                                                                 input_goals[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "masking_209 (Masking)           (None, None, 199)    0           concatenate_89[0][0]             \n",
+      "__________________________________________________________________________________________________\n",
+      "LSTM_in_1 (LSTM)                (None, None, 32)     29696       masking_209[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "LSTM_in_2 (LSTM)                (None, None, 32)     8320        LSTM_in_1[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "tf.__operators__.add_87 (TFOpLa (None, None, 32)     0           LSTM_in_2[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "alpha (Dense)                   (None, None, 35)     1155        LSTM_in_2[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "mu (Dense)                      (None, None, 35)     1155        LSTM_in_2[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "sigma (Dense)                   (None, None, 35)     1155        tf.__operators__.add_87[0][0]    \n",
+      "__________________________________________________________________________________________________\n",
+      "reshape_135 (Reshape)           (None, None, 7, 5)   0           alpha[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "reshape_136 (Reshape)           (None, None, 7, 5)   0           mu[0][0]                         \n",
+      "__________________________________________________________________________________________________\n",
+      "reshape_137 (Reshape)           (None, None, 7, 5)   0           sigma[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "logistic_mix (DistributionLambd multiple             0           reshape_135[0][0]                \n",
+      "                                                                 reshape_136[0][0]                \n",
+      "                                                                 reshape_137[0][0]                \n",
+      "==================================================================================================\n",
+      "Total params: 41,801\n",
+      "Trainable params: 41,801\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "if args.use_language:\n",
-    "    enc_policy, plan_policy, encoding, plan, indices, actions, masks, seq_lens, sentence_embeddings = trainer.train_step(batch=batch, lang=batch, beta=0, video=None, bulk=None)"
+    "actor.summary()"
    ]
   },
   {
