--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -1983,7 +1983,7 @@
     }
    ],
    "source": [
-    "f\"gsutil cp -m {'/'.join(tf_record_base.split('/')[5:])} gs://lfp_europe_west4_a/data/unity/{'/'.join(tf_record_base.split('/')[6:])}\""
+    "f\"gsutil cp -m {'/'.join(tf_record_base.split('/')[5:])} gs://lfp_europe_west4_a/data/unity/{tf_record_base.split('/')[6]}\""
    ]
   },
   {
@@ -1997,40 +1997,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['data', 'augmented_diverse_new', 'tf_records', '']"
+       "\"gsutil -m rsync -r gs://lfp_europe_west4_a/data/unity/augmented_diverse_new/tf_records/tf_records' gs://lfp_europe_west4_a/data/unity/augmented_diverse_new/tf_records\""
       ]
      },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'gsutil cp data/diverse/tf_records/labels_2.tfrecords gs://lfp_europe_west4_a/data/Unity/diverse/tf_records/'"
-      ]
-     },
-     "execution_count": 42,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f\"gsutil cp data/diverse/tf_records/{save_path.split('/')[-1]} gs://lfp_europe_west4_a/data/Unity/diverse/tf_records/\""
+    "f\"gsutil -m rsync -r gs://lfp_europe_west4_a/data/unity/{'/'.join(tf_record_base.split('/')[6:])}tf_records' gs://lfp_europe_west4_a/data/unity/{tf_record_base.split('/')[6]}/tf_records\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gsutil -m rsync -r gs://lfp_europe_west4_a/data/unity/augmented_diverse_new gs://lfp_europe_west4_a/data/unity/augmented_diverse_new/tf_records'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"gsutil -m rsync -r gs://lfp_europe_west4_a/data/unity/{tf_record_base.split('/')[6]} gs://lfp_europe_west4_a/data/unity/{tf_record_base.split('/')[6]}/tf_records\""
    ]
   },
   {
