trying to hunt dl bug

--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -2037,6 +2037,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gsutil -m cp -r \"gs://lfp_europe_west4_a/data/unity/augmented_diverse_new_test/tf_records/\" ."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [
@@ -2064,7 +2073,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gsutil -m rsync -r gs://lfp_europe_west4_a/data/unity/augmented_diverse_new_tests/tf_records data/test/ "
+   ]
   },
   {
    "cell_type": "markdown",
