--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "<module 'lfp.model' from '/catkin_ws/src/robotics/learning_from_play/lfp/model.py'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -592,6 +592,7 @@
       "    'goals': TensorSpec(shape=(1, None, 29), dtype=tf.float32, name=None),\n",
       "    'gripper_imgs': TensorSpec(shape=(1, None, 64, 64, 3), dtype=tf.uint8, name=None),\n",
       "    'imgs': TensorSpec(shape=(1, None, 200, 200, 3), dtype=tf.uint8, name=None),\n",
+      "    'imgs2': TensorSpec(shape=(1, None, 200, 200, 3), dtype=tf.uint8, name=None),\n",
       "    'obs': TensorSpec(shape=(1, None, 36), dtype=tf.float32, name=None),\n",
       "    'proprioceptive_features': TensorSpec(shape=(1, None, 7), dtype=tf.float32, name=None),\n",
       "    'tstep_idxs': TensorSpec(shape=(1, None), dtype=tf.int32, name=None)}\n",
@@ -600,17 +601,19 @@
       "    'goals': TensorSpec(shape=(1, None, 29), dtype=tf.float32, name=None),\n",
       "    'gripper_imgs': TensorSpec(shape=(1, None, 64, 64, 3), dtype=tf.uint8, name=None),\n",
       "    'imgs': TensorSpec(shape=(1, None, 200, 200, 3), dtype=tf.uint8, name=None),\n",
+      "    'imgs2': TensorSpec(shape=(1, None, 200, 200, 3), dtype=tf.uint8, name=None),\n",
       "    'obs': TensorSpec(shape=(1, None, 36), dtype=tf.float32, name=None),\n",
       "    'proprioceptive_features': TensorSpec(shape=(1, None, 7), dtype=tf.float32, name=None),\n",
       "    'tstep_idxs': TensorSpec(shape=(1, None), dtype=tf.int32, name=None)}\n",
-      "{   'acts': TensorSpec(shape=(2, None, 7), dtype=tf.float32, name=None),\n",
-      "    'dataset_path': TensorSpec(shape=(2, None), dtype=tf.int32, name=None),\n",
-      "    'goals': TensorSpec(shape=(2, None, 29), dtype=tf.float32, name=None),\n",
-      "    'gripper_imgs': TensorSpec(shape=(2, None, 64, 64, 3), dtype=tf.uint8, name=None),\n",
-      "    'imgs': TensorSpec(shape=(2, None, 200, 200, 3), dtype=tf.uint8, name=None),\n",
-      "    'obs': TensorSpec(shape=(2, None, 36), dtype=tf.float32, name=None),\n",
-      "    'proprioceptive_features': TensorSpec(shape=(2, None, 7), dtype=tf.float32, name=None),\n",
-      "    'tstep_idxs': TensorSpec(shape=(2, None), dtype=tf.int32, name=None)}\n"
+      "{   'acts': TensorSpec(shape=(32, None, 7), dtype=tf.float32, name=None),\n",
+      "    'dataset_path': TensorSpec(shape=(32, None), dtype=tf.int32, name=None),\n",
+      "    'goals': TensorSpec(shape=(32, None, 29), dtype=tf.float32, name=None),\n",
+      "    'gripper_imgs': TensorSpec(shape=(32, None, 64, 64, 3), dtype=tf.uint8, name=None),\n",
+      "    'imgs': TensorSpec(shape=(32, None, 200, 200, 3), dtype=tf.uint8, name=None),\n",
+      "    'imgs2': TensorSpec(shape=(32, None, 200, 200, 3), dtype=tf.uint8, name=None),\n",
+      "    'obs': TensorSpec(shape=(32, None, 36), dtype=tf.float32, name=None),\n",
+      "    'proprioceptive_features': TensorSpec(shape=(32, None, 7), dtype=tf.float32, name=None),\n",
+      "    'tstep_idxs': TensorSpec(shape=(32, None), dtype=tf.int32, name=None)}\n"
      ]
     }
    ],
@@ -620,16 +623,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['obs', 'acts', 'goals', 'dataset_path', 'tstep_idxs', 'imgs', 'proprioceptive_features', 'gripper_imgs'])"
+       "dict_keys(['obs', 'acts', 'goals', 'dataset_path', 'tstep_idxs', 'imgs', 'proprioceptive_features', 'imgs2', 'gripper_imgs'])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,16 +643,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['obs', 'acts', 'goals', 'dataset_path', 'tstep_idxs', 'imgs', 'proprioceptive_features', 'gripper_imgs'])"
+       "dict_keys(['obs', 'acts', 'goals', 'dataset_path', 'tstep_idxs', 'imgs', 'proprioceptive_features', 'imgs2', 'gripper_imgs'])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
