--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -1968,22 +1968,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'gsutil cp -m data/augmented_diverse_new/tf_records/ gs://lfp_europe_west4_a/data/unity/augmented_diverse_new/tf_records/'"
+       "'gsutil  -m cp -r data/augmented_diverse_new/tf_records/ gs://lfp_europe_west4_a/data/unity/augmented_diverse_new'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f\"gsutil cp -m {'/'.join(tf_record_base.split('/')[5:])} gs://lfp_europe_west4_a/data/unity/{tf_record_base.split('/')[6]}\""
+    "f\"gsutil  -m cp -r {'/'.join(tf_record_base.split('/')[5:])} gs://lfp_europe_west4_a/data/unity/{tf_record_base.split('/')[6]}\""
    ]
   },
   {
