--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -1968,22 +1968,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'gsutil  -m cp -r data/augmented_diverse_new/tf_records/ gs://lfp_europe_west4_a/data/unity/augmented_diverse_new'"
+       "'gsutil  -m cp -r data/augmented_diverse_new/tf_records/ gs://lfp_europe_west4_a/data/unity/augmented_diverse_new/tf_records/'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f\"gsutil  -m cp -r {'/'.join(tf_record_base.split('/')[5:])} gs://lfp_europe_west4_a/data/unity/{tf_record_base.split('/')[6]}\""
+    "f\"gsutil  -m cp -r {'/'.join(tf_record_base.split('/')[5:])} gs://lfp_europe_west4_a/data/unity/{'/'.join(tf_record_base.split('/')[6:])}\""
    ]
   },
   {
@@ -2074,7 +2074,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gsutil -m rsync -r gs://lfp_europe_west4_a/data/unity/augmented_diverse_new_tests/tf_records data/test/ "
+    "gsutil -m rsync -r gs://lfp_europe_west4_a/data/unity/augmented_diverse_new/ gs://lfp_europe_west4_a/data/unity/augmented_diverse_new/tf_records"
    ]
   },
   {
