--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -494,7 +494,7 @@
    ],
    "source": [
     "\n",
-    "valid_data = dl.extract(TRAIN_DATA_PATHS, from_tfrecords=args.from_tfrecords)\n",
+    "valid_data = dl.extract(TEST_DATA_PATHS, from_tfrecords=args.from_tfrecords)\n",
     "valid_dataset = dl.load(valid_data)\n",
     "v_it = iter(valid_dataset)\n",
     "batch = trainer.make_sequences_variable_length(v_it.next())\n",
@@ -653,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labelled_dl = lfp.data.labelled_dl(batch_size=GLOBAL_BATCH_SIZE, include_images = args.images, sim = args.sim, shuffle_size=32)\n",
+    "labelled_dl = lfp.data.labelled_dl(batch_size=GLOBAL_BATCH_SIZE, include_images = args.images, include_images2 = args.images2, include_gripper_images=args.gripper_images, sim = args.sim, shuffle_size=32)\n",
     "labelled_ds = iter(labelled_dl.load(labelled_dl.extract(TEST_DATA_PATHS)))"
    ]
   },
@@ -917,7 +917,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "labelled_dl = lfp.data.labelled_dl(batch_size=200, include_images = args.images, sim = args.sim)\n",
+    "labelled_dl = lfp.data.labelled_dl(batch_size=64,include_images = args.images, include_images2 = args.images2, include_gripper_images=args.gripper_images, sim = args.sim)\n",
     "labelled_ds = iter(labelled_dl.load(labelled_dl.extract(TEST_DATA_PATHS)))\n",
     "big_lang_batch = labelled_ds.next()"
    ]
@@ -1055,7 +1055,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -5823,7 +5823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
