--- a/notebooks/Creating tf_records-Copy1.ipynb
+++ b/notebooks/Creating tf_records-Copy1.ipynb
@@ -2020,6 +2020,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gsutil -m mv -r gs://lfp_europe_west4_a/data/UR5_slow_gripper/ gs://lfp_europe_west4_a/data/pybullet/UR5_slow_gripper/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gsutil -m cp -r \"gs://lfp_europe_west4_a/data/unity/augmented_diverse_new_test/tf_records/\" ."
    ]
   },
