--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "args = parser.parse_args('''\n",
     "PROB_B0_02\n",
-    "--train_dataset pybullet/UR5, pybullet/UR5_high_transition, pybullet/UR5_slow_gripper\n",
+    "--train_dataset pybullet/UR5 pybullet/UR5_high_transition pybullet/UR5_slow_gripper\n",
     "--test_dataset pybullet/UR5_slow_gripper_test\n",
     "-c\n",
     "-d GPU\n",
