--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -652,11 +652,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['obs', 'acts', 'goals', 'seq_lens', 'masks', 'proprioceptive_features', 'label', 'label_embedding', 'tags', 'imgs', 'imgs2', 'goal_imgs', 'gripper_imgs'])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "b = labelled_ds.next() "
+    "b = labelled_ds.next() \n",
+    "b.keys()\n"
    ]
   },
   {
